--- a/ChatClient/mainwindow.ui
+++ b/ChatClient/mainwindow.ui
@@ -41,7 +41,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="loginPage">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -90,7 +90,11 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QLineEdit" name="serverEdit"/>
+              <widget class="QLineEdit" name="serverEdit">
+               <property name="text">
+                <string>127.0.0.1</string>
+               </property>
+              </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_3">
@@ -166,7 +170,7 @@
            <widget class="QTextEdit" name="textEdit"/>
           </item>
           <item>
-           <widget class="QListView" name="listView">
+           <widget class="QListWidget" name="userListWidget">
             <property name="maximumSize">
              <size>
               <width>150</width>
@@ -180,7 +184,7 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
-           <widget class="QLineEdit" name="lineEdit"/>
+           <widget class="QLineEdit" name="sayEdit"/>
           </item>
           <item>
            <widget class="QPushButton" name="btSay">
